allowed host fix And change package desc to align center

--- a/ship/static/ship/trackingpage.scss
+++ b/ship/static/ship/trackingpage.scss
@@ -1,4 +1,6 @@
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -18,34 +20,31 @@
     width: 100%;
     gap: 1rem;
 
-    input[type='submit'] {
+    input[type="submit"] {
       background-color: #4c84db;
       border: none;
       border-radius: 0;
       color: white;
-      padding: .4rem .9rem;
-      transition: background-color 100ms ease-in-out, transform 100ms ease-in-out;
-      
+      padding: 0.4rem 0.9rem;
+      transition: background-color 100ms ease-in-out,
+        transform 100ms ease-in-out;
 
       &:hover {
         transform: translateY(-3%);
         background-color: darken(#4c84db, 10);
-
       }
 
       &:active {
         background-color: #4c84db;
         transform: translateY(3%);
-
       }
-
     }
 
-    input[type=text] {
+    input[type="text"] {
       flex-grow: 1;
       border: 1px solid grey;
       outline: none;
-      padding: .3rem .9rem;
+      padding: 0.3rem 0.9rem;
     }
   }
 }
@@ -55,8 +54,6 @@
 }
 
 main {
-
-
   section {
     width: 100%;
   }
@@ -67,7 +64,6 @@ main {
   gap: 2rem;
 
   .package-details {
-
     display: flex;
     flex-direction: column;
     height: max-content;
@@ -78,11 +74,9 @@ main {
       flex-direction: row;
       justify-content: center;
       align-items: stretch;
-
     }
 
     .package-description {
-
       padding: 2rem;
       background-color: #1d428a;
       display: flex;
@@ -98,7 +92,6 @@ main {
       }
 
       div {
-
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
@@ -107,7 +100,6 @@ main {
           font-weight: bold;
         }
       }
-
     }
 
     .package-image {
@@ -117,7 +109,6 @@ main {
       max-width: 500px;
       min-width: 300px;
 
-
       align-items: center;
 
       img {
@@ -125,8 +116,6 @@ main {
 
         aspect-ratio: 1/1;
         object-fit: contain;
-
-
       }
     }
 
@@ -135,11 +124,12 @@ main {
         flex-grow: 1;
       }
     }
-
   }
 
   .pack-desc-text {
     color: darken(gray, 20);
+    width: 100%;
+    text-align: center;
 
     span {
       color: black;
@@ -163,16 +153,14 @@ main {
       border: 1px solid gray;
       border-collapse: collapse;
       padding: 1rem;
-      background-color: rgba(0, 0, 0, .7);
+      background-color: rgba(0, 0, 0, 0.7);
       color: white;
 
       h1 {
         text-align: center;
-        background-color: rgba(255, 255, 255, .2);
+        background-color: rgba(255, 255, 255, 0.2);
         border-bottom: 1px solid gray;
         border-collapse: collapse;
-
-
       }
 
       > div {
@@ -183,10 +171,7 @@ main {
 
       & > div:not(:last-child) {
         border-bottom: 1px solid gray;
-
       }
-
-
     }
   }
 }
@@ -195,7 +180,7 @@ main {
   --size: 50px;
   position: fixed;
   display: none;
-  top:50%;
+  top: 50%;
   left: 50%;
   translate: (-50, -50);
   width: var(--size);
